tests/ui/field_default_and_with.rs
use quickcheck_richderive::Arbitrary;

#[derive(Arbitrary)]
struct S {
  #[quickcheck(default, with = "whatever")]
  x: u8,
}

fn main() {}
